--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
     "autoprefixer": "^10.4.13",
+    "jasmine": "^4.5.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-jasmine": "^5.1.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "tailwindscss": "^0.3.0",
